2009-03-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cleanup & bugfix.
	
	* configure.ac: Configure Python.
	* bin/cce.in,
	* bin/Makefile.am,
	* lib/t-pppalpha/slimpl.m4: Use configured Python.

	* lib/t-pppalpha/include/sl_support.h,
	* bin/spp: Remove family tag from argument names (they should all
	be in the same namespace).

	* bin/spp (pppalpha.makedic): Kill unused function.

2009-03-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start implementing ppp "compiler".

	* lib/t-pppalpha/slimpl.m4: Add.
	* lib/t-pppalpha/include/sl_support.h: Add.
	* lib/Makefile.am (nobase_dist_pkgdata_DATA): Update accordingly.

	* bin/spp: Add.
	* bin/Makefile.am (dist_bin_SCRIPTS): Update accordingly.

2009-03-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Re-organize layout of sl_support.h.

	* lib/host-host-ptl/include/sl_support.h: Rename to...
	* lib/t-ptl/include/sl_support.h: ...here.

	* lib/host-host-seqc/include/sl_support.h: Rename to...
	* lib/t-seqc/include/sl_support.h: ...here.

	* lib/mtalpha-sim/include/sl_support.h: Rename to...
	* lib/t-utc0/include/sl_support.h: ...here.

	* lib/Makefile.am (nobase_dist_pkgdata_DATA): Update accordingly.

	* bin/cce.in (slc_ppflags): Add include/ subdirectory of
	translator to preprocessor search list.

	* lib/host-host-seqc/slrt.c: Update accordingly.

2009-03-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Complete previous commit; add bootstrap
	script to initialize the dev environment.
	
	* Makefile.am: Update after upgrade of m4sugar.
	* bootstrap: Add.

2009-03-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Upgrade m4sugar.
	
	* include/slc.m4: Implement m4_step. Use m4_wrap_lifo to fix
	undivert order.

	* include/m4sugar.m4: Upgrade from Autoconf 2.59.
	* include/m4sugar_version.m4: Add.
	* include/m4sugar_foreach.m4: Add.
	* include/m4sugar_transform.sed: Update accordingly.
	
2009-03-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start using m4sugar.
	
	* include/m4sugar_transform.sed: Rename dnl to m4_dnl. Remove