@@ -1,3 +1,10 @@
+2009-03-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	* bin/spp,
+	* lib/t-pppalpha/slimpl.m4,	
+	* lib/t-pppalpha/include/sl_support.h: Advance implementation of
+	create.
+
 2009-03-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Cleanup & bugfix.
